<resources>
    <string name="app_name">AndroidView</string>
    <string name="textimageButton">Text And Image Button</string>
    <string name="buttonClicked">Button Clicked</string>
    <string name="xmlbuttonClicked">Xml Button Clicked</string>
    <string name="disablebackpressButton">Disable OnBackpress Button</string>
    <string name="updatetextButton">Update Text Button</string>
    <string name="animateButton">Animate Button</string>
    <string name="refreshActivityButton">Refresh Activity Button</string>
    <string name="buttonStyle">Button Style</string>
    <string name="toolbarButton">Toolbar Button</string>
    <string name="prograButtonTint">Button Tint Programmatically</string>
    <string name="soundButton">Play Sound Button</string>
    <string name="dynamicallyButton">Dynamically Button</string>
    <string name="disableDoubleClickingButton">Disable Double Clicking Button</string>
    <string name="getbuttonText">Get Button Text</string>
    <string name="prograMarginButton">Margin Button Programmatically</string>
    <string name="custombuttonState">Custom Button State</string>
    <string name="disableAndroidButton">Disable Android Button</string>
    <string name="lowercasetextButton">Lowercase Text Button</string>
    <string name="onbackpressExitButton">OnBackPress Exit Button</string>
    <string name="fabProgrammatically">Fab Programmatically</string>
    <string name="circleButton">Circle Button</string>
    <string name="materialeffectButton">Material Effect Button</string>
    <string name="centerButtonprogra">Center Button Programmatically</string>
    <string name="alertDialogOnButton">Alert Dialog On Button Click</string>
    <string name="changefabColor">Change Fab Color</string>
    <string name="displayBackbutton">Display Back Button On ToolBar</string>
    <string name="edittextcursorcolor">EditText Cursor Color</string>
    <string name="edittextcursoronend">EditText Cursor On End</string>
    <string name="limittextofedittext">Limit Text Of EditText</string>
    <string name="hideedittextunderlineborder">Hide Edittext Underline Border</string>
    <string name="edittextunderlinebordercolor">EditText Underline Border Color</string>
    <string name="edittextunderlineborder">Edittext Underline Border</string>
    <string name="edittextcapfirstletter">EditText Cap First Letter</string>
    <string name="textcolorofedittext">Text Color Of EditText</string>
    <string name="edittextbackgroundcolor">EditText Background Color</string>
    <string name="edittextsingleline">EditText SingleLine</string>
    <string name="edittexthint">EditText Hint</string>
    <string name="edittexthintcolor">EditText Hint Color</string>
    <string name="edittextsetfocus">EditText Set Focus</string>
    <string name="edittextdatepicker">EditText Datepicker</string>
    <string name="programinputtype">Programmatically InputType</string>
    <string name="multilineedittext">Multi Line EditText</string>
    <string name="programdisableedittext">Programmatically Disable EditText</string>
    <string name="edittextinputvalue">EditText Get Input Value</string>
    <string name="edittextprogrammatically">EditText Programmatically</string>
    <string name="validateedittext">Validate EditText</string>
    <string name="copyedittext">Copy EditText Text</string>
    <string name="clearedittext">Clear EditText</string>
    <string name="alertdialogedittext">Alert Dialog EditText</string>
    <string name="roundedcorneredittext">Rounded Corner EditText</string>
    <string name="shadowedittext">Shadow EditText</string>
    <string name="disableedittext">Disable EditText</string>
    <string name="disablesuggestionedittext">Disable suggestion EditText</string>
    <string name="onclickedittext">OnClick EditText</string>
    <string name="textwatcheredittext">TextWatcher EditText</string>
    <string name="onfocuschangelistneredittext">OnFocusChangeListner EditText</string>
    <string name="oneditoractionlistneredittext">OnEditorActionListner EditText</string>
    <string name="disableedittextcursor">Disable EditText Blinking Cursor</string>
    <string name="emptyedittextcheck">Empty EditText Check</string>
    <string name="edittextwithicon">EditText With Icon</string>
    <string name="edittextdrawableclick">EditText Drawable Click</string>
    <string name="numericedittext">Numeric EditText</string>
    <string name="getedittextint">Get Int In EditText</string>
    <string name="floatinglabelcolor">Color TextInputLayout</string>
    <string name="disableanimate">Disable Anim TextInput</string>
    <string name="lefticon">Left Icon TextInput</string>
    <string name="programmaticallyaccent">Accent Color Program</string>
    <string name="aligntextinputlayouterror">Align TextInputLayout Error</string>
    <string name="asteriskredtextinputlayout">Required Field Hint</string>
    <string name="asteriskred"><font color='#cc0029'>*</font></string>
    <string name="multiviewrecycler">Multiple View Recycler View</string>
    <string name="horilistviewrecycler">Horiz List RecyclerView</string>
    <string name="recyclerwithin">RecyclerView Within</string>
    <string name="recyclervisible">Recycler Visible Item</string>
    <string name="recycleronnestedscrollview">Recycler On NestedScrollView</string>
    <string name="recyclergridlayoutspacing">Recycler GridLayout Spacing</string>
    <string name="endlessrecycler">Endless Recycler</string>
    <string name="recycleronclick">RecyclerView OnClick</string>
    <string name="updaterecycler">Update RecyclerView</string>
    <string name="swipedismissrecycler">Swipe Dismiss Recycler</string>
    <string name="expandablelistrecycler">Expandable List Recycler</string>
    <string name="layoutmanagerrecycler">LayoutManager Recycler</string>
    <string name="addremoveitemrecycler">Add Remove Item Recycler</string>
    <string name="searchrecycler">Search Recycler</string>
    <string name="rippleeffectrecycler">Ripple Effect Recycler</string>
    <string name="emptyviewrecycler">Empty View Recycler</string>
    <string name="positionrecycler">Position Recycler</string>
    <string name="disablescrollrecycler">Disable Scroll Recycler</string>
    <string name="selecteditemcolorrecycler">Selected Item Color Recycler</string>
    <string name="listentowebview">Listen To Webview</string>
    <string name="calljsfunction">Call Js Function</string>
    <string name="fileuploadwebview">File Upload Webview</string>
    <string name="webviewvideo">Webview Video</string>
    <string name="clearcache">Clear Cache</string>
    <string name="externalwebpage">External Webpage</string>
    <string name="displaypdf">Display Pdf</string>
    <string name="fontfacewebview">Font Face Webview</string>
    <string name="webviewbackgroundcolor">Webview Background Color</string>
    <string name="backtopreviouspage">Back To Previous Page</string>
    <string name="webviewprogressbar">ProgressBar Webview</string>
    <string name="zoomandpinchcontrol">Zoom And Pinch Control</string>
    <string name="imageinwebview">Image In Webview</string>
    <string name="webviewinfragement">Webview In Fragement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disablecacheinwebview">Disable Cache In Webview</string>
    <string name="programmaticallywebview">Programmatically Webview</string>
    <string name="overridewebviewclient">Override Webview Client</string>
    <string name="preventwebviewrotate">Prevent Webview Rotate</string>
    <string name="webviewinscrollview">Webview In Scrollview</string>
    <string name="paddingaroundwebview">Padding Around Webview</string>
    <string name="reloadwebview">Reload Webview</string>
    <string name="webviewcookie">Webview Cookie</string>
    <string name="googlesafebrowsinginwebview">Google Safe Browsing</string>
    <string name="changesearchviewtext">Change SearchView Text</string>
    <string name="focusonsearchview">Focus On SearchView</string>
    <string name="backgrounddrawable">Background Drawable</string>
    <string name="changetextcolor">Change Text Color</string>
    <string name="searchviewinfragment">SearchView In Fragment</string>
    <string name="searchviewcenter">SearchView Center</string>
    <string name="autocollapseactionbar">Auto Collapse Actionbar</string>
    <string name="searchname">Search Name</string>
    <string name="dialogsearchview">Dialog Searchview</string>
    <string name="roundedcorner">Rounded Corner</string>
    <string name="disablesearchview">Disable Searchview</string>
    <string name="getsearchviewtext">Get Searchview Text</string>
    <string name="startactivity">Start Activity</string>
    <string name="communicate">Communicate</string>
    <string name="home">Home</string>
    <string name="blog">Blog</string>
    <string name="App">App</string>
    <string name="menuitemtextcolor">Menu Item Text Color</string>
    <string name="menuitemtextfont">Menu Item Text Font</string>
    <string name="menuitemiconcolor">Menu Item Icon Color</string>
    <string name="hidemenuitem">Hide Menu Item</string>
    <string name="handlemenuitemclick">Handle Menu Item Click</string>
    <string name="updatemenuitem">Update Menu Item</string>
    <string name="onprepareoptionsmenumethod">OnPrepareOptionsMenu Method</string>
    <string name="backgroundcolormenu">Background Color Menu</string>
    <string name="divideinmenuitem">Divide In Menu Item</string>
    <string name="groupmenuitem">Group Menu Item</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="searchviewmenu">SearchView Menu</string>
    <string name="menuinallactivity">Menu In All Activity</string>
    <string name="menuwithicon">Menu With Icon</string>
    <string name="menudifferenttab">Menu Different Tab</string>
    <string name="actionviewclassmenu">ActionViewClass Menu</string>
    <string name="actionlayoutmenu">ActionLayout Menu</string>
    <string name="recyclerwithmenu">Recycler With Menu</string>
    <string name="contextlistnermenu">Context Listner Menu</string>
    <string name="customcontextmenu">Custom Context Menu</string>
    <string name="postmethod">Post Method</string>
    <string name="putmethod">Put Method</string>
    <string name="deletemethod">Delete Method</string>
    <string name="networktimeout">Network Timeout</string>
    <string name="rawpostjson">Raw Post Json</string>
    <string name="multipartpost">Multipart Post</string>
    <string name="removecharacter">Remove Character</string>
    <string name="cacheretrofit">Cache Retrofit</string>
    <string name="logging">Logging</string>
    <string name="interceptorheader">Interceptor Header</string>
    <string name="statuscode">Status Code</string>
    <string name="parsejson">Parse Json</string>
    <string name="basicauth">Basic Auth</string>
    <string name="nestedjson">Nested Json</string>
    <string name="rxjavaretrofit">Rxjava Retrofit</string>
    <string name="postparameter">Post Parameter</string>
    <string name="converterfactory">Converter Factory</string>
    <string name="customcookie">Custom Cookie</string>
    <string name="cancelrequest">Cancel Request</string>
    <string name="usevolley">Use Volley</string>
    <string name="getmethod">Get Method</string>
    <string name="getmethodparameter">Get Method Parameter</string>
    <string name="postmethodparameter">Post Method Parameter</string>
    <string name="putmethodparameter">Put Method Parameter</string>
    <string name="jsonresponse">Json Response</string>
    <string name="requestcache">Request Cache</string>
    <string name="customheader">Custom Header</string>
    <string name="tokenauth">Token Auth</string>
    <string name="sslsupport">Ssl Support</string>
    <string name="downloadimage">Download Image</string>
    <string name="disklruimagecache">DiskLruImageCache</string>
    <string name="queuerequest">Queue Request</string>
</resources>