<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_volley2"
        android:title="@string/usevolley"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley3"
        android:title="@string/getmethod"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley4"
        android:title="@string/getmethodparameter"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley5"
        android:title="@string/postmethod"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley6"
        android:title="@string/postmethodparameter"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley7"
        android:title="@string/putmethod"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley8"
        android:title="@string/putmethodparameter"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley9"
        android:title="@string/jsonresponse"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley10"
        android:title="@string/requestcache"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley11"
        android:title="@string/customheader"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley12"
        android:title="@string/customcookie"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley13"
        android:title="@string/cancelrequest"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley14"
        android:title="@string/statuscode"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley15"
        android:title="@string/logging"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley16"
        android:title="@string/tokenauth"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley17"
        android:title="@string/sslsupport"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley18"
        android:title="@string/downloadimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley19"
        android:title="@string/disklruimagecache"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volley20"
        android:title="@string/queuerequest"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
